--- a/android_app/app/src/main/res/layout/sy_cw.xml
+++ b/android_app/app/src/main/res/layout/sy_cw.xml
@@ -61,7 +61,7 @@
 
                 <LinearLayout
                     android:id="@+id/llSY_ZF_ZZ"
-                    android:layout_width="100dp"
+                    android:layout_width="130dp"
                     android:layout_height="75dp"
                     android:layout_gravity="left|bottom"
                     android:background="@null"
@@ -69,11 +69,11 @@
 
                     <ImageView
                         android:id="@+id/ivSY_ZF_ZZ"
-                        android:layout_width="27dp"
-                        android:layout_height="27dp"
+                        android:layout_width="38dp"
+                        android:layout_height="38dp"
                         android:layout_gravity="center|bottom"
                         android:adjustViewBounds="true"
-                        android:src="@drawable/no_image" />
+                        android:src="@drawable/sy_cw_cwg" />
 
                     <TextView
                         android:id="@+id/tvSY_ZF_ZZ"
@@ -86,7 +86,7 @@
 
                 <LinearLayout
                     android:id="@+id/llZP"
-                    android:layout_width="100dp"
+                    android:layout_width="130dp"
                     android:layout_height="75dp"
                     android:layout_gravity="left|bottom"
                     android:background="@null"
@@ -94,11 +94,11 @@
 
                     <ImageView
                         android:id="@+id/ivSY_ZF_HZ"
-                        android:layout_width="27dp"
-                        android:layout_height="27dp"
+                        android:layout_width="38dp"
+                        android:layout_height="38dp"
                         android:layout_gravity="center|bottom"
                         android:adjustViewBounds="true"
-                        android:src="@drawable/no_image" />
+                        android:src="@drawable/sy_cw_cwm" />
 
                     <TextView
                         android:id="@+id/tvSY_ZF_HZ"
@@ -111,7 +111,7 @@
 
                 <LinearLayout
                     android:id="@+id/llSY_ZF_DZ"
-                    android:layout_width="100dp"
+                    android:layout_width="130dp"
                     android:layout_height="75dp"
                     android:layout_gravity="left|bottom"
                     android:background="@null"
@@ -119,42 +119,17 @@
 
                     <ImageView
                         android:id="@+id/ivSY_ZF_DZ"
-                        android:layout_width="27dp"
-                        android:layout_height="27dp"
+                        android:layout_width="38dp"
+                        android:layout_height="38dp"
                         android:layout_gravity="center|bottom"
                         android:adjustViewBounds="true"
-                        android:src="@drawable/no_image" />
+                        android:src="@drawable/sy_cw_hnyc" />
 
                     <TextView
                         android:id="@+id/tvSY_ZF_DZ"
                         android:layout_width="match_parent"
                         android:layout_height="25dp"
                         android:text="花鸟鱼虫"
-                        android:textAlignment="center" />
-
-                </LinearLayout>
-
-                <LinearLayout
-                    android:id="@+id/llSY_ZF_GRFY"
-                    android:layout_width="100dp"
-                    android:layout_height="75dp"
-                    android:layout_gravity="left|bottom"
-                    android:background="@null"
-                    android:orientation="vertical">
-
-                    <ImageView
-                        android:id="@+id/ivSY_ZF_GRFY"
-                        android:layout_width="27dp"
-                        android:layout_height="27dp"
-                        android:layout_gravity="center|bottom"
-                        android:adjustViewBounds="true"
-                        android:src="@drawable/no_image" />
-
-                    <TextView
-                        android:id="@+id/tvSY_ZF_GRFY"
-                        android:layout_width="match_parent"
-                        android:layout_height="25dp"
-                        android:text="宠物用品"
                         android:textAlignment="center" />
 
                 </LinearLayout>
@@ -168,9 +143,35 @@
                 android:background="@null"
                 android:orientation="horizontal">
 
+
+                <LinearLayout
+                    android:id="@+id/llSY_ZF_GRFY"
+                    android:layout_width="130dp"
+                    android:layout_height="75dp"
+                    android:layout_gravity="left|bottom"
+                    android:background="@null"
+                    android:orientation="vertical">
+
+                    <ImageView
+                        android:id="@+id/ivSY_ZF_GRFY"
+                        android:layout_width="38dp"
+                        android:layout_height="38dp"
+                        android:layout_gravity="center|bottom"
+                        android:adjustViewBounds="true"
+                        android:src="@drawable/sy_cw_cwyp" />
+
+                    <TextView
+                        android:id="@+id/tvSY_ZF_GRFY"
+                        android:layout_width="match_parent"
+                        android:layout_height="25dp"
+                        android:text="宠物用品"
+                        android:textAlignment="center" />
+
+                </LinearLayout>
+
                 <LinearLayout
                     android:id="@+id/llSY_ZF_XZL"
-                    android:layout_width="100dp"
+                    android:layout_width="130dp"
                     android:layout_height="75dp"
                     android:layout_gravity="left|bottom"
                     android:background="@null"
@@ -178,11 +179,11 @@
 
                     <ImageView
                         android:id="@+id/ivSY_ZF_XZL"
-                        android:layout_width="27dp"
-                        android:layout_height="27dp"
+                        android:layout_width="38dp"
+                        android:layout_height="38dp"
                         android:layout_gravity="center|bottom"
                         android:adjustViewBounds="true"
-                        android:src="@drawable/no_image" />
+                        android:src="@drawable/sy_cw_cwfw" />
 
                     <TextView
                         android:id="@+id/tvSY_ZF_XZL"
@@ -195,7 +196,7 @@
 
                 <LinearLayout
                     android:id="@+id/llSY_CW_ZS"
-                    android:layout_width="100dp"
+                    android:layout_width="130dp"
                     android:layout_height="75dp"
                     android:layout_gravity="left|bottom"
                     android:background="@null"
@@ -203,67 +204,17 @@
 
                     <ImageView
                         android:id="@+id/ivSY_CW_ZS"
-                        android:layout_width="27dp"
-                        android:layout_height="27dp"
+                        android:layout_width="38dp"
+                        android:layout_height="38dp"
                         android:layout_gravity="center|bottom"
                         android:adjustViewBounds="true"
-                        android:src="@drawable/no_image" />
+                        android:src="@drawable/sy_cw_zsly" />
 
                     <TextView
                         android:id="@+id/tvSY_CW_ZS"
                         android:layout_width="match_parent"
                         android:layout_height="25dp"
-                        android:text="宠物赠送"
-                        android:textAlignment="center" />
-
-                </LinearLayout>
-
-                <LinearLayout
-                    android:id="@+id/llSY_CW_LY"
-                    android:layout_width="100dp"
-                    android:layout_height="75dp"
-                    android:layout_gravity="left|bottom"
-                    android:background="@null"
-                    android:orientation="vertical">
-
-                    <ImageView
-                        android:id="@+id/ivSY_CW_LY"
-                        android:layout_width="27dp"
-                        android:layout_height="27dp"
-                        android:layout_gravity="center|bottom"
-                        android:adjustViewBounds="true"
-                        android:src="@drawable/no_image" />
-
-                    <TextView
-                        android:id="@+id/tvSY_CW_LY"
-                        android:layout_width="match_parent"
-                        android:layout_height="25dp"
-                        android:text="宠物领养"
-                        android:textAlignment="center" />
-
-                </LinearLayout>
-
-                <LinearLayout
-                    android:id="@+id/llSY_CW_XCQS"
-                    android:layout_width="100dp"
-                    android:layout_height="75dp"
-                    android:layout_gravity="left|bottom"
-                    android:background="@null"
-                    android:orientation="vertical">
-
-                    <ImageView
-                        android:id="@+id/ivSY_CW_XCQS"
-                        android:layout_width="27dp"
-                        android:layout_height="27dp"
-                        android:layout_gravity="center|bottom"
-                        android:adjustViewBounds="true"
-                        android:src="@drawable/no_image" />
-
-                    <TextView
-                        android:id="@+id/tvSY_CW_XCQS"
-                        android:layout_width="match_parent"
-                        android:layout_height="25dp"
-                        android:text="寻宠启示"
+                        android:text="赠送领养"
                         android:textAlignment="center" />
 
                 </LinearLayout>
