--- a/android_app/app/src/main/res/layout/sy_esf.xml
+++ b/android_app/app/src/main/res/layout/sy_esf.xml
@@ -69,11 +69,11 @@
 
                     <ImageView
                         android:id="@+id/ivSY_ZF_ZZ"
-                        android:layout_width="27dp"
-                        android:layout_height="27dp"
+                        android:layout_width="38dp"
+                        android:layout_height="38dp"
                         android:layout_gravity="center|bottom"
                         android:adjustViewBounds="true"
-                        android:src="@drawable/no_image" />
+                        android:src="@drawable/sy_esf_esf" />
 
                     <TextView
                         android:id="@+id/tvSY_ZF_ZZ"
@@ -94,11 +94,11 @@
 
                     <ImageView
                         android:id="@+id/ivSY_ZF_XF"
-                        android:layout_width="27dp"
-                        android:layout_height="27dp"
+                        android:layout_width="38dp"
+                        android:layout_height="38dp"
                         android:layout_gravity="center|bottom"
                         android:adjustViewBounds="true"
-                        android:src="@drawable/no_image" />
+                        android:src="@drawable/sy_esf_xf" />
 
                     <TextView
                         android:id="@+id/tvSY_ZF_XF"
@@ -119,11 +119,11 @@
 
                     <ImageView
                         android:id="@+id/ivSY_ZF_HZ"
-                        android:layout_width="27dp"
-                        android:layout_height="27dp"
+                        android:layout_width="38dp"
+                        android:layout_height="38dp"
                         android:layout_gravity="center|bottom"
                         android:adjustViewBounds="true"
-                        android:src="@drawable/no_image" />
+                        android:src="@drawable/sy_esf_sp" />
 
                     <TextView
                         android:id="@+id/tvSY_ZF_HZ"
@@ -144,42 +144,17 @@
 
                     <ImageView
                         android:id="@+id/ivSY_ZF_DZ"
-                        android:layout_width="27dp"
-                        android:layout_height="27dp"
+                        android:layout_width="38dp"
+                        android:layout_height="38dp"
                         android:layout_gravity="center|bottom"
                         android:adjustViewBounds="true"
-                        android:src="@drawable/no_image" />
+                        android:src="@drawable/sy_esf_xzl" />
 
                     <TextView
                         android:id="@+id/tvSY_ZF_DZ"
                         android:layout_width="match_parent"
                         android:layout_height="25dp"
                         android:text="写字楼"
-                        android:textAlignment="center" />
-
-                </LinearLayout>
-
-                <LinearLayout
-                    android:id="@+id/llSY_ZF_GRFY"
-                    android:layout_width="100dp"
-                    android:layout_height="75dp"
-                    android:layout_gravity="left|bottom"
-                    android:background="@null"
-                    android:orientation="vertical">
-
-                    <ImageView
-                        android:id="@+id/ivSY_ZF_GRFY"
-                        android:layout_width="27dp"
-                        android:layout_height="27dp"
-                        android:layout_gravity="center|bottom"
-                        android:adjustViewBounds="true"
-                        android:src="@drawable/no_image" />
-
-                    <TextView
-                        android:id="@+id/tvSY_ZF_GRFY"
-                        android:layout_width="match_parent"
-                        android:layout_height="25dp"
-                        android:text="厂房"
                         android:textAlignment="center" />
 
                 </LinearLayout>
@@ -203,11 +178,11 @@
 
                     <ImageView
                         android:id="@+id/ivSY_ZF_CF"
-                        android:layout_width="27dp"
-                        android:layout_height="27dp"
+                        android:layout_width="38dp"
+                        android:layout_height="38dp"
                         android:layout_gravity="center|bottom"
                         android:adjustViewBounds="true"
-                        android:src="@drawable/no_image" />
+                        android:src="@drawable/sy_esf_cf" />
 
                     <TextView
                         android:id="@+id/tvSY_ZF_CF"
@@ -228,11 +203,11 @@
 
                     <ImageView
                         android:id="@+id/ivSY_ZF_XZL"
-                        android:layout_width="27dp"
-                        android:layout_height="27dp"
+                        android:layout_width="38dp"
+                        android:layout_height="38dp"
                         android:layout_gravity="center|bottom"
                         android:adjustViewBounds="true"
-                        android:src="@drawable/no_image" />
+                        android:src="@drawable/sy_esf_ck" />
 
                     <TextView
                         android:id="@+id/tvSY_ZF_XZL"
@@ -253,11 +228,11 @@
 
                     <ImageView
                         android:id="@+id/ivSY_ZF_CW"
-                        android:layout_width="27dp"
-                        android:layout_height="27dp"
+                        android:layout_width="38dp"
+                        android:layout_height="38dp"
                         android:layout_gravity="center|bottom"
                         android:adjustViewBounds="true"
-                        android:src="@drawable/no_image" />
+                        android:src="@drawable/sy_esf_cw" />
 
                     <TextView
                         android:id="@+id/tvSY_ZF_CW"
@@ -278,11 +253,11 @@
 
                     <ImageView
                         android:id="@+id/ivSY_ZF_TD"
-                        android:layout_width="27dp"
-                        android:layout_height="27dp"
+                        android:layout_width="38dp"
+                        android:layout_height="38dp"
                         android:layout_gravity="center|bottom"
                         android:adjustViewBounds="true"
-                        android:src="@drawable/no_image" />
+                        android:src="@drawable/sy_esf_td" />
 
                     <TextView
                         android:id="@+id/tvSY_ZF_TD"
