--- a/android_app/app/src/main/res/layout/sy_swfw.xml
+++ b/android_app/app/src/main/res/layout/sy_swfw.xml
@@ -39,7 +39,7 @@
                 android:textColor="#FFFFFF"
                 android:paddingLeft="5dp"
                 android:paddingTop="8dp"
-                android:text="生活服务"
+                android:text="商务服务"
                 android:textSize="20dp" />
 
         </LinearLayout>
