--- a/android_app/app/src/main/res/layout/sy_zf.xml
+++ b/android_app/app/src/main/res/layout/sy_zf.xml
@@ -37,18 +37,15 @@
                     android:background="#bc6ba6"
                     android:src="@drawable/arrow_back" />
 
-                <TextView
+                <EditText
                     android:id="@+id/etSJH"
-                    android:layout_width="326dp"
+                    android:layout_width="330dp"
                     android:layout_height="42dp"
-                    android:textAlignment="center"
                     android:layout_gravity="center"
-                    android:background="#bc6ba6"
-                    android:textColor="#FFFFFF"
-                    android:paddingLeft="5dp"
-                    android:paddingTop="8dp"
-                    android:text="租房"
-                    android:textSize="20dp" />
+                    android:textAlignment="center"
+                    android:background="#ffffff"
+                    android:hint="请输入类别或关键字"
+                    android:textSize="15dp" />
 
             </LinearLayout>
 
@@ -69,11 +66,11 @@
 
                     <ImageView
                         android:id="@+id/ivSY_ZF_ZZ"
-                        android:layout_width="27dp"
-                        android:layout_height="27dp"
+                        android:layout_width="38dp"
+                        android:layout_height="38dp"
                         android:layout_gravity="center|bottom"
                         android:adjustViewBounds="true"
-                        android:src="@drawable/no_image" />
+                        android:src="@drawable/sy_zf_zz" />
 
                     <TextView
                         android:id="@+id/tvSY_ZF_ZZ"
@@ -94,11 +91,11 @@
 
                     <ImageView
                         android:id="@+id/ivSY_ZF_HZ"
-                        android:layout_width="27dp"
-                        android:layout_height="27dp"
+                        android:layout_width="38dp"
+                        android:layout_height="38dp"
                         android:layout_gravity="center|bottom"
                         android:adjustViewBounds="true"
-                        android:src="@drawable/no_image" />
+                        android:src="@drawable/sy_zf_hz" />
 
                     <TextView
                         android:id="@+id/tvSY_ZF_HZ"
@@ -119,11 +116,11 @@
 
                     <ImageView
                         android:id="@+id/ivSY_ZF_DZ"
-                        android:layout_width="27dp"
-                        android:layout_height="27dp"
+                        android:layout_width="38dp"
+                        android:layout_height="38dp"
                         android:layout_gravity="center|bottom"
                         android:adjustViewBounds="true"
-                        android:src="@drawable/no_image" />
+                        android:src="@drawable/sy_zf_dz" />
 
                     <TextView
                         android:id="@+id/tvSY_ZF_DZ"
@@ -144,11 +141,11 @@
 
                     <ImageView
                         android:id="@+id/ivSY_ZF_GRFY"
-                        android:layout_width="27dp"
-                        android:layout_height="27dp"
+                        android:layout_width="38dp"
+                        android:layout_height="38dp"
                         android:layout_gravity="center|bottom"
                         android:adjustViewBounds="true"
-                        android:src="@drawable/no_image" />
+                        android:src="@drawable/sy_zf_grfy" />
 
                     <TextView
                         android:id="@+id/tvSY_ZF_GRFY"
@@ -178,11 +175,11 @@
 
                     <ImageView
                         android:id="@+id/ivSY_ZF_XZL"
-                        android:layout_width="27dp"
-                        android:layout_height="27dp"
+                        android:layout_width="38dp"
+                        android:layout_height="38dp"
                         android:layout_gravity="center|bottom"
                         android:adjustViewBounds="true"
-                        android:src="@drawable/no_image" />
+                        android:src="@drawable/sy_zf_xzl" />
 
                     <TextView
                         android:id="@+id/tvSY_ZF_XZL"
@@ -203,11 +200,11 @@
 
                     <ImageView
                         android:id="@+id/ivSY_ZF_SP"
-                        android:layout_width="27dp"
-                        android:layout_height="27dp"
+                        android:layout_width="38dp"
+                        android:layout_height="38dp"
                         android:layout_gravity="center|bottom"
                         android:adjustViewBounds="true"
-                        android:src="@drawable/no_image" />
+                        android:src="@drawable/sy_zf_sp" />
 
                     <TextView
                         android:id="@+id/tvSY_ZF_SP"
@@ -228,11 +225,11 @@
 
                     <ImageView
                         android:id="@+id/ivSY_ZF_CW"
-                        android:layout_width="27dp"
-                        android:layout_height="27dp"
+                        android:layout_width="38dp"
+                        android:layout_height="38dp"
                         android:layout_gravity="center|bottom"
                         android:adjustViewBounds="true"
-                        android:src="@drawable/no_image" />
+                        android:src="@drawable/sy_zf_cw" />
 
                     <TextView
                         android:id="@+id/tvSY_ZF_CW"
@@ -253,11 +250,11 @@
 
                     <ImageView
                         android:id="@+id/ivSY_ZF_CF"
-                        android:layout_width="27dp"
-                        android:layout_height="27dp"
+                        android:layout_width="38dp"
+                        android:layout_height="38dp"
                         android:layout_gravity="center|bottom"
                         android:adjustViewBounds="true"
-                        android:src="@drawable/no_image" />
+                        android:src="@drawable/sy_zf_cf" />
 
                     <TextView
                         android:id="@+id/tvSY_ZF_CF"
@@ -277,14 +274,14 @@
                 android:orientation="horizontal">
 
                 <TextView
-                    android:id="@+id/tvCNXH"
+                    android:id="@+id/tvXGFW"
                     android:layout_width="80dp"
                     android:layout_height="48dp"
                     android:layout_marginLeft="20dp"
                     android:background="@null"
                     android:paddingTop="13dp"
                     android:text="相关服务"
-                    android:textSize="15sp" />
+                    android:textSize="18dp" />
 
             </LinearLayout>
 
@@ -305,11 +302,11 @@
 
                     <ImageView
                         android:id="@+id/ivSY_ZF_BJ"
-                        android:layout_width="27dp"
-                        android:layout_height="27dp"
+                        android:layout_width="38dp"
+                        android:layout_height="38dp"
                         android:layout_gravity="center|bottom"
                         android:adjustViewBounds="true"
-                        android:src="@drawable/no_image" />
+                        android:src="@drawable/sy_zf_bj" />
 
                     <TextView
                         android:id="@+id/tvSY_ZF_BJ"
@@ -330,11 +327,11 @@
 
                     <ImageView
                         android:id="@+id/ivSY_ZF_BAOJ"
-                        android:layout_width="27dp"
-                        android:layout_height="27dp"
+                        android:layout_width="38dp"
+                        android:layout_height="38dp"
                         android:layout_gravity="center|bottom"
                         android:adjustViewBounds="true"
-                        android:src="@drawable/no_image" />
+                        android:src="@drawable/sy_zf_baoj" />
 
                     <TextView
                         android:id="@+id/tvSY_ZF_BAOJ"
@@ -355,11 +352,11 @@
 
                     <ImageView
                         android:id="@+id/ivSY_ZF_WX"
-                        android:layout_width="27dp"
-                        android:layout_height="27dp"
+                        android:layout_width="38dp"
+                        android:layout_height="38dp"
                         android:layout_gravity="center|bottom"
                         android:adjustViewBounds="true"
-                        android:src="@drawable/no_image" />
+                        android:src="@drawable/sy_zf_wx" />
 
                     <TextView
                         android:id="@+id/tvSY_ZF_WX"
@@ -380,11 +377,11 @@
 
                     <ImageView
                         android:id="@+id/ivSY_ZF_PS"
-                        android:layout_width="27dp"
-                        android:layout_height="27dp"
+                        android:layout_width="38dp"
+                        android:layout_height="38dp"
                         android:layout_gravity="center|bottom"
                         android:adjustViewBounds="true"
-                        android:src="@drawable/no_image" />
+                        android:src="@drawable/sy_zf_ps" />
 
                     <TextView
                         android:id="@+id/tvSY_ZF_PS"
@@ -394,6 +391,33 @@
                         android:textAlignment="center" />
 
                 </LinearLayout>
+
+            </LinearLayout>
+
+            <LinearLayout
+                android:layout_width="410dp"
+                android:layout_height="48dp"
+                android:background="@null"
+                android:orientation="horizontal">
+
+                <TextView
+                    android:id="@+id/tvCNXH"
+                    android:layout_width="80dp"
+                    android:layout_height="48dp"
+                    android:layout_marginLeft="20dp"
+                    android:background="@null"
+                    android:paddingTop="13dp"
+                    android:text="猜你喜欢"
+                    android:textSize="18dp" />
+
+            </LinearLayout>
+
+            <LinearLayout
+                android:id="@+id/llCNXH"
+                android:layout_width="400dp"
+                android:layout_height="match_parent"
+                android:background="@null"
+                android:orientation="vertical">
 
             </LinearLayout>
 
