--- a/android_app/app/src/main/res/layout/sy_zp.xml
+++ b/android_app/app/src/main/res/layout/sy_zp.xml
@@ -69,11 +69,11 @@
 
                     <ImageView
                         android:id="@+id/ivSY_ZP_FJZW"
-                        android:layout_width="27dp"
-                        android:layout_height="27dp"
+                        android:layout_width="38dp"
+                        android:layout_height="38dp"
                         android:layout_gravity="center|bottom"
                         android:adjustViewBounds="true"
-                        android:src="@drawable/no_image" />
+                        android:src="@drawable/sy_zp_fjzw" />
 
                     <TextView
                         android:id="@+id/tvSY_ZP_FJZW"
@@ -94,11 +94,11 @@
 
                     <ImageView
                         android:id="@+id/ivSY_ZP_JZZW"
-                        android:layout_width="27dp"
-                        android:layout_height="27dp"
+                        android:layout_width="38dp"
+                        android:layout_height="38dp"
                         android:layout_gravity="center|bottom"
                         android:adjustViewBounds="true"
-                        android:src="@drawable/no_image" />
+                        android:src="@drawable/sy_zp_jzzw" />
 
                     <TextView
                         android:id="@+id/tvSY_ZP_JZZW"
@@ -119,11 +119,11 @@
 
                     <ImageView
                         android:id="@+id/ivSY_ZP_QBZW"
-                        android:layout_width="27dp"
-                        android:layout_height="27dp"
+                        android:layout_width="38dp"
+                        android:layout_height="38dp"
                         android:layout_gravity="center|bottom"
                         android:adjustViewBounds="true"
-                        android:src="@drawable/no_image" />
+                        android:src="@drawable/sy_zp_qbzw" />
 
                     <TextView
                         android:id="@+id/tvSY_ZP_QBZW"
@@ -144,11 +144,11 @@
 
                     <ImageView
                         android:id="@+id/ivSY_ZP_LTZGZ"
-                        android:layout_width="27dp"
-                        android:layout_height="27dp"
+                        android:layout_width="38dp"
+                        android:layout_height="38dp"
                         android:layout_gravity="center|bottom"
                         android:adjustViewBounds="true"
-                        android:src="@drawable/no_image" />
+                        android:src="@drawable/sy_zp_ltzgz" />
 
                     <TextView
                         android:id="@+id/tvSY_ZP_LTZGZ"
