--- a/TianWen.XiaoZhen1Qu.Web/Areas/Business/Css/CXLB/LRCX.css
+++ b/TianWen.XiaoZhen1Qu.Web/Areas/Business/Css/CXLB/LRCX.css
@@ -42,7 +42,7 @@
 .div_body .ul_body_head .li_body_head:hover{ cursor: pointer;}
 
 /*首页_主体_左部*/
-.div_body .div_body_left{display: inline-block;width: 980px;height: 1760px;background-color: #ffffff;float: left;}
+.div_body .div_body_left{display: inline-block;width: 980px;height: auto;background-color: #ffffff;float: left;}
 .div_body .div_body_left .ul_body_left{ width: 100%;padding: 0;}
 .div_body .div_body_left .ul_body_left .li_body_left{ width: 100%;height: 180px;border-bottom: 1px solid #e6e6e6;padding: 10px;}
 .div_body .div_body_left .ul_body_left .li_body_left:hover{ background-color: #f9f9f9;}
