--- a/TianWen.XiaoZhen1Qu.Web/Areas/Business/Views/FCCX/FCCX_ZZF.cshtml
+++ b/TianWen.XiaoZhen1Qu.Web/Areas/Business/Views/FCCX/FCCX_ZZF.cshtml
@@ -15,20 +15,37 @@
         <div id="div_condition_body_QY" class="div_condition_body" style="padding-top: 20px;"></div>
         <div id="div_condition_body_DD" class="div_condition_body"></div>
         <div id="div_condition_body_ZJ" class="div_condition_body"></div>
-        <div id="div_condition_body_CZFS" class="div_condition_body"></div>
+	<div id="div_condition_body_S" class="div_condition_body"></div>
 	    <div id="div_condition_body_QT" class="div_condition_body">
-		    <ul class="ul_condition_body" id="ul_condition_body_QT" style="height: auto;">
-			    <li class="li_condition_body_first">其他</li>
-		        <li class="li_condition_body li_condition_body_active">
-                    <div id="divFWCXText" class="div_select_out">
+		<ul class="ul_condition_body" id="ul_condition_body_QT" style="height: auto;">
+		    <li class="li_condition_body_first">其他</li>
+		    <li class="li_condition_body" style="margin-right:10px;">
+                        <div id="divFWCXText" class="div_select_out">
                         <div id="divFWCXSpan" class="div_select_in">
-                            <span id="spanFWCX" column="CX" class="span_select spaninput_fontcolor">请选择朝向</span>
-                            <div class="span_select_arrow"></div>
+                        <span id="spanFWCX" column="CX" class="span_select spaninput_fontcolor">朝向不限</span>
+                        <div class="span_select_arrow"></div>
                         </div>
-                        <div id="divFWCX" class="div_select_dropdown">
+                        <div id="divFWCX" class="div_select_dropdown"></div>
                         </div>
-                    </div>
-                </li>
+                    </li>
+ 		    <li class="li_condition_body" style="margin-right:10px;">
+                        <div id="divZXQKText" class="div_select_out">
+                        <div id="divZXQKSpan" class="div_select_in">
+                        <span id="spanZXQK" column="ZXQK" class="span_select spaninput_fontcolor">装修不限</span>
+                        <div class="span_select_arrow"></div>
+                        </div>
+                        <div id="divZXQK" class="div_select_dropdown"></div>
+                        </div>
+                    </li>
+		    <li class="li_condition_body" style="margin-right:10px;">
+                        <div id="divZZLXText" class="div_select_out">
+                        <div id="divZZLXSpan" class="div_select_in">
+                        <span id="spanZZLX" column="ZZLX" class="span_select spaninput_fontcolor">类型不限</span>
+                        <div class="span_select_arrow"></div>
+                        </div>
+                        <div id="divZZLX" class="div_select_dropdown"></div>
+                        </div>
+                    </li>
 	        </ul>
 	    </div>
     </div>
@@ -38,7 +55,6 @@
         </ul>
     </div>
     <div class="div_condition_toggle">
-
     </div>
     <div id="divBody" class="div_body" style="margin-top: 0;">
         <ul class="ul_body_head">
