--- a/TianWen.XiaoZhen1Qu.Web/Areas/Business/Views/SY/SY.cshtml
+++ b/TianWen.XiaoZhen1Qu.Web/Areas/Business/Views/SY/SY.cshtml
@@ -158,11 +158,11 @@
         <div class="div_body_middle" style="width: 280px;margin-right:5px;">
             <div id="div_body_middle_left_FC" class="div_body_middle_left_section" style="width: 280px;height:180px;">
 		<p class="p_body_middle_left_title" onclick="ToEJSY('FCSY')" id="p_body_middle_left_title_FC" style="border-bottom-color: #f2f2f2; border-bottom-width: 1px; border-bottom-style: solid;">房产</p>
-		<ul class="ul_body_middle_left_section" style="height: 30px;">
-			<li class="li_body_middle_left_section purple" style="margin-right:20px;" onclick="OpenCXLB(13,'/FCCX/FCCX_ZZF','null')">租房</li>		
+		<ul class="ul_body_middle_left_section" style="height: 30px;">		
 			<li class="li_body_middle_left_section" style="margin-right:20px;" onclick="OpenCXLB(13,'/FCCX/FCCX_ZZF','null')">整租</li>
 			<li class="li_body_middle_left_section" style="margin-right:20px;" onclick="OpenCXLB(14,'/FCCX/FCCX_HZF','null')">合租</li>
 			<li class="li_body_middle_left_section" style="margin-right:20px;" onclick="OpenCXLB(15,'/FCCX/FCCX_DZF','null')">短租</li>
+			<li class="li_body_middle_left_section" style="margin-right:20px;" onclick="OpenCXLB(13,'/FCCX/FCCX_ZZF','null')">公寓</li>
 		</ul>
 		<ul class="ul_body_middle_left_section" style="height: 30px;">		
 			<li class="li_body_middle_left_section purple" style="margin-right:20px;" onclick="OpenCXLB(16,'/FCCX/FCCX_ESF','null')">二手房</li>
