--- a/TianWen.XiaoZhen1Qu.Web/Areas/Business/Css/CXLB/FCCX.css
+++ b/TianWen.XiaoZhen1Qu.Web/Areas/Business/Css/CXLB/FCCX.css
@@ -6,7 +6,7 @@
 .div_nav .ul_nav .li_nav_split{ float: left;margin-left: 10px;margin-right: 10px;}
 
 /*首页_头部_查询条件*/
-.div_condition{background-color: #ffffff;display: block;width: 1200px;height: auto;overflow: hidden;border: 1px solid #cccccc;}
+.div_condition{background-color: #ffffff;display: block;width: 1200px;height: auto;overflow: visible;border: 1px solid #cccccc;}
 .div_condition .ul_condition_head{display: block;width: 100%;height: 40px;padding: 0;}
 .div_condition .ul_condition_head .li_condition_head{display: inline-block;float: left;text-align: center;color: #999999;font-size: 16px;width: 100px;height: 40px;padding: 8px 10px;background-color: #eeeff1;cursor: pointer;}
 
@@ -34,18 +34,18 @@
 /*首页_主体_左部*/
 .div_body .div_body_left{display: inline-block;width: 980px;height: auto;background-color: #ffffff;}
 .div_body .div_body_left .ul_body_left{ width: 100%;padding: 0;}
-.div_body .div_body_left .ul_body_left .li_body_left{ width: 100%;height: 180px;border-bottom: 1px solid #e6e6e6;padding: 10px;cursor: pointer;}
+.div_body .div_body_left .ul_body_left .li_body_left{ width: 100%;height: 145px;border-bottom: 1px solid #e6e6e6;padding: 10px;cursor: pointer;}
 .div_body .div_body_left .ul_body_left .li_body_left:hover{ background-color: #f9f9f9;}
 .div_body .div_body_left .ul_body_left .li_body_left:hover .p_li_body_left_center_bt{ color: #bc6ba6;}
-.div_body .div_body_left .ul_body_left .li_body_left .div_li_body_left_left{height: 155px;width: 180px;float: left;display: inline-block;position: relative;}
-.div_body .div_body_left .ul_body_left .li_body_left .div_li_body_left_left .img_li_body_left{ width: 180px;height: 135px;}
+.div_body .div_body_left .ul_body_left .li_body_left .div_li_body_left_left{height: 130px;width: 145px;float: left;display: inline-block;position: relative;}
+.div_body .div_body_left .ul_body_left .li_body_left .div_li_body_left_left .img_li_body_left{ width: 145px;height: 110px;}
 .div_body .div_body_left .ul_body_left .li_body_left .div_li_body_left_left .div_img_li_body_left_count{ padding: 0px 1px;background:rgba(0,0,0,.6);position: absolute;width: 35px;height: 20px;left: 0;bottom: 20px;text-align:center;}
 .div_body .div_body_left .ul_body_left .li_body_left .div_li_body_left_left .div_img_li_body_left_count span{ color: #ffffff;}
-.div_body .div_body_left .ul_body_left .li_body_left .div_li_body_left_center{ width: 660px;height: 100%;padding: 10px;float: left;display: inline-block;}
-.div_body .div_body_left .ul_body_left .li_body_left .div_li_body_left_center .p_li_body_left_center_bt{ margin-bottom:20px;font-size: 20px;font-weight: 700;height: 32px;overflow:hidden;}
-.div_body .div_body_left .ul_body_left .li_body_left .div_li_body_left_center .p_li_body_left_center_cs{ color: #999999;height: 35px;}
-.div_body .div_body_left .ul_body_left .li_body_left .div_li_body_left_center .p_li_body_left_center_dz{ color: #999999;height: 35px;}
-.div_body .div_body_left .ul_body_left .li_body_left .div_li_body_left_center .p_li_body_left_center_nr{ font-size: 14px;color: #999999;height: 45px;overflow: hidden;}
+.div_body .div_body_left .ul_body_left .li_body_left .div_li_body_left_center{ width: 660px;height: 100%;padding: 0px 10px 0px 10px;float: left;display: inline-block;}
+.div_body .div_body_left .ul_body_left .li_body_left .div_li_body_left_center .p_li_body_left_center_bt{ margin-bottom:10px;font-size: 20px;font-weight: 700;height: 35px;overflow:hidden;}
+.div_body .div_body_left .ul_body_left .li_body_left .div_li_body_left_center .p_li_body_left_center_cs{ color: #999999;height: 32px;}
+.div_body .div_body_left .ul_body_left .li_body_left .div_li_body_left_center .p_li_body_left_center_dz{ color: #999999;height: 32px;}
+.div_body .div_body_left .ul_body_left .li_body_left .div_li_body_left_center .p_li_body_left_center_nr{ font-size: 12px;color: #999999;height: 45px;overflow: hidden;}
 .div_body .div_body_left .ul_body_left .li_body_left .div_li_body_left_right{ width: 120px;height: 100%;display: inline-block;float: left;padding-top: 10px;}
 .div_body .div_body_left .ul_body_left .li_body_left .div_li_body_left_right .p_li_body_left_right{color: #bc6ba6;font-size: 16px;text-align: right;}
 .div_body .div_body_left .ul_body_left .li_body_left .div_li_body_left_right .p_li_body_left_right .span_zj{font-size: 28px;font-weight: 700;margin-right: 5px;}
@@ -77,11 +77,11 @@
 .font_size19{ font-size: 19px;}
 .font_size20{ font-size: 20px;}
 
-.div_select_out {display: inline-block;width: 160px;height: 40px;border-radius: 4px;border: 1px solid #cccccc;position: relative;}
-.div_select_in {display: inline-block;width: 160px;height: 40px;border-radius: 4px;font-size: 14px;border: none;}
-.div_select_dropdown {float: left; width: 150px;position: relative;z-index: 1001;}
-.span_select {display: inline-block;width: 130px;height: 30px;text-align: center;margin-top: 6px;}
+.div_select_out {display: inline-block;width: 75px;height: 20px;border: 1px solid #cccccc;position: relative;}
+.div_select_in {display: inline-block;width: 75px;height: 20px;font-size: 12px;border: none;}
+.div_select_dropdown {float: left; width: 75px;position: relative;z-index: 1001;top:0;}
+.span_select {display: inline-block;width: 55px;height: 20px;text-align: center;color:#999999;}
 .span_select_arrow {background-image: url(../images/arrow_down.png);width: 16px;height: 16px;display: inline-block;vertical-align: middle;}
-.ul_select {border-radius: 4px;margin-left: -1px;text-align: center;width: 160px;display: inline-block;border-left: 1px solid #cccccc;border-right: 1px solid #cccccc;border-bottom: 1px solid #cccccc;padding-left: 0px;height: 341px;}
-.li_select {height: 34px;text-align: left;display: block;padding-left: 6px;line-height: 34px;font-size: 14px;cursor: pointer;color: #999999;background: #FFFFFF;}
+.ul_select {border-radius: 0px;margin-left: -1px;text-align: center;width: 75px;display: inline-block;border-left: 1px solid #cccccc;border-right: 1px solid #cccccc;border-bottom: 1px solid #cccccc;padding-left: 0px;height: 341px;}
+.li_select {height: 30px;text-align: left;display: block;line-height: 30px;padding-left:4px;font-size: 12px;cursor: pointer;color: #999999;background: #FFFFFF;width:100%;}
 .li_select:hover {background: #ececec;color: #333333;}
