--- a/TianWen.XiaoZhen1Qu.Web/Areas/Business/Views/FCCX/FCCX_HZF.cshtml
+++ b/TianWen.XiaoZhen1Qu.Web/Areas/Business/Views/FCCX/FCCX_HZF.cshtml
@@ -14,17 +14,31 @@
             </ul>*@
         <div id="div_condition_body_QY" class="div_condition_body" style="padding-top: 20px;"></div>
         <div id="div_condition_body_DD" class="div_condition_body"></div>
+	<div id="div_condition_body_ZJ" class="div_condition_body"></div>
         <div id="div_condition_body_CZJLX" class="div_condition_body"></div>
-        <div id="div_condition_body_ZJ" class="div_condition_body"></div>
-        <div id="div_condition_body_CX" class="div_condition_body"></div>
-        <div id="div_condition_body_ZXQK" class="div_condition_body"></div>
-        <div id="div_condition_body_SF" class="div_condition_body" style="display: none;">
-            <ul id="ul_condition_body_SF" class="ul_condition_body">
-                <li class="li_condition_body_first">身份</li>
-                <li class="li_condition_body">全部</li>
-                <li class="li_condition_body">个人</li>
-                <li class="li_condition_body">经纪人</li>
-            </ul>
+	<div id="div_condition_body_QT" class="div_condition_body">
+		<ul class="ul_condition_body" id="ul_condition_body_QT" style="height: auto;">
+		    <li class="li_condition_body_first">其他</li>
+		    <li class="li_condition_body" style="margin-right:10px;">
+                        <div id="divFWCXText" class="div_select_out">
+                        <div id="divFWCXSpan" class="div_select_in">
+                        <span id="spanFWCX" column="CX" class="span_select spaninput_fontcolor">朝向不限</span>
+                        <div class="span_select_arrow"></div>
+                        </div>
+                        <div id="divFWCX" class="div_select_dropdown"></div>
+                        </div>
+                    </li>
+ 		    <li class="li_condition_body" style="margin-right:10px;">
+                        <div id="divZXQKText" class="div_select_out">
+                        <div id="divZXQKSpan" class="div_select_in">
+                        <span id="spanZXQK" column="ZXQK" class="span_select spaninput_fontcolor">装修不限</span>
+                        <div class="span_select_arrow"></div>
+                        </div>
+                        <div id="divZXQK" class="div_select_dropdown"></div>
+                        </div>
+                    </li>
+	        </ul>
+	    </div>
         </div>
     </div>
     <div id="divConditionSelect" class="div_condition_select">
