--- a/TianWen.XiaoZhen1Qu.Web/Areas/Business/Css/Common/XXXX_Common.css
+++ b/TianWen.XiaoZhen1Qu.Web/Areas/Business/Css/Common/XXXX_Common.css
@@ -8,9 +8,9 @@
 .div_head_left .img_head_left_logo {width: 100%;text-align: center;color: white;font-size: 25px;float: left;width: 155px;height: 55px;}
 
 /*首页_导航*/
-.div_nav { width: 1200px;height: 28px;display: block;}
+.div_nav { width: 1200px;height: 28px;display: block; font-size:12px;}
 .div_nav .ul_nav { width: 100%;padding: 0;}
-.div_nav .ul_nav .li_nav_font{ float: left;font-size: 14px;}
+.div_nav .ul_nav .li_nav_font{ float: left;}
 .div_nav .ul_nav .li_nav_split{ float: left;margin-left: 10px;margin-right: 10px;}
 
 /*首页_主体_右部*/
@@ -70,7 +70,7 @@
 .div_body .div_body_right .div_body_right_xglm .em_body_right_xglm{ height: 1px;width: 260px;margin-top: 10px;margin-bottom: 10px;display: block;background-color: #cccccc;}
 
 
-.div_body .div_body_left .div_body_left_body_right .span_body_left_body_right_zj .span_zj{ font-weight: 700;font-size: 32px;}
+.div_body .div_body_left .div_body_left_body_right .span_body_left_body_right_zj .span_zj{ font-weight: 700;font-size: 32px;margin-right:5px;}
 
 .div_body .div_body_left .div_body_left_body_xq .div_body_left_body_xq_xx_bcms{ height: auto;overflow: hidden;}
 
@@ -93,3 +93,7 @@
 .div_body .div_body_left .div_body_left_head .p_div_body_left_head_ll .i_div_body_left_head_sc{ width:20px;height:20px;display:inline-block;background-image:url(../images/XXXX/gy/xxxx_gy_sc.png);background-size:100%;}
 
 .img_body_left_body_left_show{ width: 460px;height: 350px;}
+
+.div_shadow {display: none;background-color: #000;opacity: 0.5;position: fixed;top: 0;left: 0;z-index: 1100;width: 100%;height: 100%;}
+
+.div_img_window{ z-index: 1101;position: relative;}
