--- a/TianWen.XiaoZhen1Qu.Web/Areas/Business/Views/FCCX/FCCX_ESF.cshtml
+++ b/TianWen.XiaoZhen1Qu.Web/Areas/Business/Views/FCCX/FCCX_ESF.cshtml
@@ -58,6 +58,14 @@
                     </li>
 	        </ul>
 	    </div>
+        <div id="div_condition_body_SF" class="div_condition_body" style="display: none;">
+            <ul id="ul_condition_body_SF" class="ul_condition_body">
+                <li class="li_condition_body_first">身份</li>
+                <li class="li_condition_body">全部</li>
+                <li class="li_condition_body">个人</li>
+                <li class="li_condition_body">经纪人</li>
+            </ul>
+        </div>
     </div>
     <div id="divConditionSelect" class="div_condition_select">
         <ul id="ul_condition_select" class="ul_condition_select">
