--- a/TianWen.XiaoZhen1Qu.Web/Areas/Business/Views/FCCX/FCCX_ZZF.cshtml
+++ b/TianWen.XiaoZhen1Qu.Web/Areas/Business/Views/FCCX/FCCX_ZZF.cshtml
@@ -20,12 +20,12 @@
 		<ul class="ul_condition_body" id="ul_condition_body_QT" style="height: auto;">
 		    <li class="li_condition_body_first">其他</li>
 		    <li class="li_condition_body" style="margin-right:10px;">
-                        <div id="divFWCXText" class="div_select_out">
-                        <div id="divFWCXSpan" class="div_select_in">
-                        <span id="spanFWCX" column="CX" class="span_select spaninput_fontcolor">朝向不限</span>
+                        <div id="divCXText" class="div_select_out">
+                        <div id="divCXSpan" class="div_select_in">
+                        <span id="spanCX" column="CX" class="span_select spaninput_fontcolor">朝向不限</span>
                         <div class="span_select_arrow"></div>
                         </div>
-                        <div id="divFWCX" class="div_select_dropdown"></div>
+                        <div id="divCX" class="div_select_dropdown"></div>
                         </div>
                     </li>
  		    <li class="li_condition_body" style="margin-right:10px;">
@@ -48,6 +48,14 @@
                     </li>
 	        </ul>
 	    </div>
+        <div id="div_condition_body_SF" class="div_condition_body" style="display: none;">
+            <ul id="ul_condition_body_SF" class="ul_condition_body">
+                <li class="li_condition_body_first">身份</li>
+                <li class="li_condition_body">全部</li>
+                <li class="li_condition_body">个人</li>
+                <li class="li_condition_body">经纪人</li>
+            </ul>
+        </div>
     </div>
     <div id="divConditionSelect" class="div_condition_select">
         <ul id="ul_condition_select" class="ul_condition_select">
